--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "expo": "~43.0.2",
-    "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "@react-navigation/bottom-tabs": "6.5.8",
+    "@react-navigation/native": "6.1.7",
+    "@react-navigation/native-stack": "6.9.13",
+    "expo": "49.0.6",
+    "expo-status-bar": "1.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
+    "react-native-safe-area-context": "4.7.1",
+    "react-native-screens": "3.24.0",
+    "react-native-web": "0.19.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "prettier": "^2.5.1",
-    "typescript": "~4.3.5"
+    "@babel/core": "7.22.10",
+    "@types/react": "18.2.19",
+    "@types/react-native": "0.72.2",
+    "prettier": "3.0.1",
+    "typescript": "5.1.6"
   },
   "private": true
 }
